QtCore/gen_qplugin.h

class QJsonObject;
class QPluginMetaData;
typedef QPluginMetaData::ElfNoteHeader QPluginMetaData__ElfNoteHeader;
class QPluginMetaData__ElfNoteHeader;
typedef QPluginMetaData::Header QPluginMetaData__Header;
class QPluginMetaData__Header;
typedef QPluginMetaData::MagicHeader QPluginMetaData__MagicHeader;
class QPluginMetaData__MagicHeader;
class QStaticPlugin;
typedef struct QJsonObject QJsonObject;
typedef struct QPluginMetaData QPluginMetaData;
typedef struct QPluginMetaData__ElfNoteHeader QPluginMetaData__ElfNoteHeader;
typedef struct QPluginMetaData__Header QPluginMetaData__Header;
typedef struct QPluginMetaData__MagicHeader QPluginMetaData__MagicHeader;
typedef struct QStaticPlugin QStaticPlugin;
unsigned char QPluginMetaData_archRequirements();
void QPluginMetaData_delete(QPluginMetaData* self);
QJsonObject* QStaticPlugin_metaData(const QStaticPlugin* self);
void QStaticPlugin_delete(QStaticPlugin* self);
QPluginMetaData__Header* QPluginMetaData__Header_new(QPluginMetaData__Header* param1);
void QPluginMetaData__Header_delete(QPluginMetaData__Header* self);
QPluginMetaData__MagicHeader* QPluginMetaData__MagicHeader_new();
void QPluginMetaData__MagicHeader_delete(QPluginMetaData__MagicHeader* self);
QPluginMetaData__ElfNoteHeader* QPluginMetaData__ElfNoteHeader_new(unsigned int payloadSize);
QPluginMetaData__ElfNoteHeader* QPluginMetaData__ElfNoteHeader_new2(QPluginMetaData__ElfNoteHeader* param1);
void QPluginMetaData__ElfNoteHeader_delete(QPluginMetaData__ElfNoteHeader* self);